<resources>
    <string name="app_name">My App Ruben</string>

    <!--Main-->
    <string name="calculos">cálculos</string>
    <string name="conversor">conversor</string>
    <string name="calimc">calcilar imc</string>
    <!--Calculatorapp-->
    <string name="Introduce_num">Introduce los números:</string>
    <string name="num1">Numero 1:</string>
    <string name="num2">Numero 2:</string>
    <!--Conversorapp-->
    <string name="tvSeleccionarMoneda">Selecciona la moneda a la que quiere convertir</string>
    <string name="resultado">Resultado: </string>
    <!--IMCapp-->
    <string name="male">Hombre</string>
    <string name="female">Mujer</string>
    <string name="height">Altura</string>
    <string name="weight">Peso</string>
    <string name="age">Edad</string>
    <string name="calculate">Calcular</string>
    <string name="result">Tu resultado</string>
    <string name="recalculate">Recalcular</string>

    <string name="error">Error</string>

    <string name="bajoPeso">Bajo peso</string>
    <string name="descriptionBajoPeso">Estás por debajo de lo óptimo para tu peso y altura</string>

    <string name="nomalPeso">Peso normal</string>
    <string name="descriptionNormalPeso">Estás en lo óptimo para tu peso y altura</string>

    <string name="sobrepeso">Sobrepeso</string>
    <string name="descriptionSobrepeso">Estás por encima de lo óptimo para tu peso y altura</string>

    <string name="obesidad">Obesidad</string>
    <string name="descriptionObesidad">Estás Muy por encima de lo óptimo para tu peso y altura</string>
</resources>