<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/background">

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnCalculosApp"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:text="@string/calculos"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:backgroundTint="@color/black"
        android:textColor="@color/white"
        android:layout_marginTop="260dp"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnConversorApp"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:layout_marginVertical="16dp"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/black"
        android:text="@string/conversor"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnCalculosApp" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnIMCApp"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:text="@string/calimc"
        app:layout_constraintEnd_toEndOf="parent"
        android:backgroundTint="@color/black"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnConversorApp"
        android:layout_marginVertical="16dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>